started fixing and adapting key and index logic